Revert "Fix image overflow with certain feeds"
This reverts commit 9321870dbf4e77f1a2aa5ce102c6c0be1765170e.

--- a/Vienna/SharedSupport/Styles/Papes.viennastyle/stylesheet.css
+++ b/Vienna/SharedSupport/Styles/Papes.viennastyle/stylesheet.css
@@ -133,7 +133,7 @@ code, pre,
 textarea, input,
 iframe, object,
 embed, video {
-  max-width: 100% !important;
+  max-width: 100%;
 }
 
 /* specific direction for code */
